@@ -1,20 +1,13 @@
 package java.java8_streamAPI_1_BlogDev_Q;
 
-import java.util.Arrays;
 import java.util.List;
 
-
+/**
+ * Find the first even number.
+ */
 public class d_4b_FindFirstElementEvenNumber {
     public static void main(String[] args) {
-        System.out.println("======  Find First Even Number  ======");
-        List<Integer> myList = Arrays.asList(1, 3, 5, 7);
-        Integer res = myList.stream()
-                .filter(n -> n % 2 == 0)
-                .findFirst()
-                .orElse(-1);
-
-        System.out.println(res);
+        List<Integer> myList = List.of(10, 15, 8, 49, 25, 98, 32, 16, 33, 10, 10, 10, 10, 11, 11, 11, 12, 12);
+        String input = "Java articles are Awesome Why Study and Pratice is Needed";
     }
 }
-
-
