@@ -1,28 +1,13 @@
 package java.java8_streamAPI_1_BlogDev_Q;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * 9. Given a list of integers, sort all the values present in it using Stream
- * functions?
+ * 9. Given a list of integers, sort all the values present in it using Stream functions?
  */
 public class i_9_SortValues {
     public static void main(String[] args) {
-        // List
-        List<Integer> myList = Arrays.asList(10, 15, 18, 8, 49, 25, 98, 32, 15);
-        //myList.stream().sorted().forEach(System.out::println);
-        myList.stream()
-                .sorted()
-                .forEach(e -> System.out.println(e));
-
-
-        // Arrays
-        //int[] arr = new int[10,15,18,8,49,25,98,32,15];
-        int[] arr = {10, 15, 18, 8, 49, 25, 98, 32, 15};
-        Arrays.stream(arr).boxed().sorted().forEach(System.out::println);
-
+        List<Integer> myList = List.of(10, 15, 8, 49, 25, 98, 32, 16, 33, 10, 10, 10, 10, 11, 11, 11, 12, 12);
+        String input = "Java articles are Awesome Why Study and Pratice is Needed";
     }
 }
-
-
